apps/sock-shop/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: front-end
  namespace: sock-shop
  labels:
    app: front-end
    env: production
  annotations:
    prometheus.io/scrape: "true"
spec:
  selector:
    app: front-end
  ports:
    - port: 80
      targetPort: 8079
---
apiVersion: v1
kind: Service
metadata:
  name: catalogue
  namespace: sock-shop
  labels:
    app: catalogue
    env: production
spec:
  selector:
    app: catalogue
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: catalogue-db
  namespace: sock-shop
  labels:
    app: catalogue-db
    env: production
spec:
  selector:
    app: catalogue-db
  ports:
    - port: 3306
      targetPort: 3306
---
apiVersion: v1
kind: Service
metadata:
  name: carts
  namespace: sock-shop
  labels:
    app: carts
    env: production
spec:
  selector:
    app: carts
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: orders
  namespace: sock-shop
  labels:
    app: orders
    env: production
spec:
  selector:
    app: orders
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: payment
  namespace: sock-shop
  labels:
    app: payment
    env: production
spec:
  selector:
    app: payment
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: shipping
  namespace: sock-shop
  labels:
    app: shipping
    env: production
spec:
  selector:
    app: shipping
  ports:
    - port: 80
      targetPort: 80
